src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidTargetTypeForStyle.xaml


<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns:tar="clr-namespace:Avalon.Test.CoreUI.PropertyEngine.StyleTargetType;assembly=CoreTestsUntrusted" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.PropertyEngine.StyleTargetType;assembly=CoreTestsUntrusted">
    <Canvas.Resources>
        <Style x:Key="FrameworkInputElementStyle" TargetType="{x:Type tar:CustomFrameworkInputElement}">
            <Setter Property="MyDP" Value="Red" />
        </Style>		
    </Canvas.Resources>
    <tar:CustomFrameworkInputElement Style="{DynamicResource FrameworkInputElementStyle}" />	
</Canvas>

